issue #CDS-818 #comment Increased font size for single-column 25/75 layout to improve readability

--- a/sass/panel-layouts/clean-25-75.scss
+++ b/sass/panel-layouts/clean-25-75.scss
@@ -41,5 +41,6 @@
   	$zen-gutter-width: 30px;
   	@include zen-grid-item(1,1);
     @include zen-clear(left);
+    font-size: 115%;
   }
 }
